# d3p2

./: .gitignore  README.md  exp_1.sh  exp_2.sh  main.sh  pyproject.toml
.jz/: README.md  _argmax.slurm  _logdet.slurm  _main.slurm  _rbf.slurm  derisk.slurm  derisk_ampere.slurm  derisk_volta.slurm  main.slurm  volta.slurm
.scripts/: exp.sh  exp_1.sh  exp_2.sh  launch.sh  launch_bis.sh  llada.sh  main.sh  multi.sh  window.sh
configs/: exp.yaml
exps/: README.md  partition.py  test_dpp.py
mauve/: compute_mauve.py  utils.py
src/: _config.py  _default.yaml  _diffusion_llada.py  config.py  config_old.py  diffusion.py  diffusion_llada.py  diffusion_mdlm.py  dpp.py  embeddings.py  eval_core.py  main.py  main_window.py  metrics.py  sampler.py  single_run.py  single_run_llada.py  single_run_mdlm.py  sweep_argmax.py  sweep_logdet.py  sweep_rbf.py  sweep_unified.py  utils.py
src/configs/: __main__.py  config.py
src/data/: __init__.py  owt.py  qa.py
src/exps/: embeddings_mdlm.py  sweep_argmax.py  sweep_logdet.py  sweep_main.py  sweep_unified.py
src/llada/: get_log_likelohood.py  modeling_llada.py
src/llada_ref/: get_log_likelohood.py
src/mdlm/: configuration_mdlm.py  modeling_mdlm.py
src/mdlm_ref/: modeling_mdlm.py
src/subsample/: __init__.py  base.py  beam.py  beam_search.py  common.py  dpp.py  dpp_selector.py  exhaustive.py  greedy_map.py  mmr.py  monte_carlo.py  random.py  random_selector.py  test.py
